fix: size of fonts on mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ body {
 .card__price--main-price {
   font-family: var(--ff-h1);
   color: var(--dark-cyan);
-  font-size: 2.8rem;
+  font-size: 3rem;
   margin-right: 2.6rem;
 }
 
@@ -185,12 +185,14 @@ body {
   }
 
   .card__title {
-    font-size: 3rem;
+    font-size: 3.5rem;
     line-height: 1;
     margin-bottom: 3.3rem;
   }
 
   .card__subtitle {
+    letter-spacing: 0.3rem;
+    font-size: 1.3rem;
     margin-bottom: 2.7rem;
   }
 
