--- a/scss/layout/_card__body.scss
+++ b/scss/layout/_card__body.scss
@@ -31,7 +31,7 @@
 .card__price--main-price{
     font-family: var(--ff-h1);
     color: var(--dark-cyan);
-    font-size: 2.8rem;
+    font-size: 3rem;
     margin-right: 2.6rem;
 }
 
