--- a/scss/layout/_media.scss
+++ b/scss/layout/_media.scss
@@ -38,12 +38,14 @@
     }
 
     .card__title{
-        font-size: 3rem;
+        font-size: 3.5rem;
         line-height: 1;
         margin-bottom: 3.3rem;
     }
 
     .card__subtitle{
+        letter-spacing: .3rem;
+        font-size: 1.3rem;
         margin-bottom: 2.7rem;
     }
 
